--- a/community/src/main/resources/templates/profile.html
+++ b/community/src/main/resources/templates/profile.html
@@ -29,12 +29,15 @@
                     <hr>
 
                     <!-- 循环显示问题 -->
-                    <div class="row g-0 mb-4" th:each="question : ${pagination.questions}"  style="border-bottom: 1px solid #e6e6e6;">
+                    <div class="row g-0 mb-4" th:each="question : ${pagination.data}"  style="border-bottom: 1px solid #e6e6e6;">
                         <div class="col-md-2 d-flex justify-content-center align-items-center">
                             <img th:src="${question.users.getAvatarUrl()}" class="img-fluid" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
                         </div>
                         <div class="col-md-10">
-                            <h5 class="mt-0" th:text="${question.getTitle()}" style="font-size: 1.2rem; font-weight: 500;"></h5>
+                            <h5 class="mt-0" style="font-size: 1.2rem; font-weight: 500;">
+                                <a th:href="@{'/question/' + ${question.getId()}}" th:text="${question.getTitle()}"></a>
+                            </h5>
+
 
                             <div class="d-flex justify-content-between align-items-center text-muted mt-2" style="font-size: 0.875rem;">
                                 <span>
